Edited wiki page through web user interface.

--- a/wiki/MacEssentials.wiki
+++ b/wiki/MacEssentials.wiki
@@ -4,14 +4,14 @@
 
   * [http://www.google.it/search?q=handbrake handbrake]
   * [http://www.google.it/search?q=vlc vlc]
-  * [http://www.google.it/search?q=googlechrome googlechrome]
+  * [http://www.google.it/search?q=google+chrome google+chrome]
   * [http://www.google.it/search?q=qt+sdk+mac qt+sdk+mac]
   * [http://www.google.it/search?q=xquartz xquartz]
   * [http://www.google.it/search?q=virtualbox virtualbox]
   * [http://www.google.it/search?q=adium adium]
   * [http://www.google.it/search?q=flip4mac flip4mac]
   * [http://www.google.it/search?q=geektool geektool]
-  * [http://www.google.it/search?q=googlenotifier googlenotifier]
+  * [http://www.google.it/search?q=google+notifier google+notifier]
   * [http://www.google.it/search?q=grandperspective grandperspective]
   * [http://www.google.it/search?q=istats+menus istats+menus]
   * [http://www.google.it/search?q=letexit letexit]
