--- a/wiki/MacEssentials.wiki
+++ b/wiki/MacEssentials.wiki
@@ -44,5 +44,6 @@
   * [http://www.google.it/search?q=plt+scheme plt+scheme]
   * [http://www.google.it/search?q=isync+nokia+5800 isync+nokia+5800]
   * [http://www.google.it/search?q=python python]
+  * [http://www.google.it/search?q=apptrap apptrap]
   * [http://www.google.it/search?q=google+earth google+earth]
   * [http://www.google.it/search?q=unarchiver unarchiver]
