Edited wiki page through web user interface.

--- a/wiki/MacEssentials.wiki
+++ b/wiki/MacEssentials.wiki
@@ -47,3 +47,4 @@
   * [http://www.google.it/search?q=apptrap apptrap]
   * [http://www.google.it/search?q=google+earth google+earth]
   * [http://www.google.it/search?q=unarchiver unarchiver]
+  * [http://www.google.it/search?q=SMARTReporter SMARTReporter]
